feat: add filter option

--- a/src/pages/hello-ionic/hello-ionic.scss
+++ b/src/pages/hello-ionic/hello-ionic.scss
@@ -1,3 +1,13 @@
 page-hello-ionic {
+  ion-badge {
+    margin-left: 5px;
+    margin-bottom: 5px;
+  }
+
+  .close-button {
+    position: absolute;
+    right: 5px;
+    top:5px;
+  }
 
 }
