--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -13,7 +13,7 @@ $font-path: "../assets/fonts";
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
 $toolbar-background:  #0C487C;
-$background-color: rgb(213,238, 247);
+$background-color: #f2f2f2;
 $card-ios-background-color: #fff;
 $card-md-background-color: #fff;
 $card-wp-background-color: #fff;
