feat: add localizations & lang selection

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -12,9 +12,9 @@
         <!--<ion-avatar item-left>
           <img [src]="currentUser.photoURL">
         </ion-avatar>-->
-        <h3>Welcome!</h3>
+        <h3>{{ "sidebar.welcome.title" | translate }}!</h3>
         <p>
-          Enjoy the Yoseikan Card Offers!
+          {{ "sidebar.welcome.text" | translate }}
         </p>
       </ion-item>
     </ion-list>
